--- a/estilos.css
+++ b/estilos.css
@@ -15,12 +15,12 @@
 }
 
 p {
-    font-size: xx-large;
+    font-size: 2em;
     padding: 15%;
 }
 
 button {
-    font-size: xx-large;
+    font-size: 2em;
     padding: 0.75em;
 }
 
