--- a/poesia.css
+++ b/poesia.css
@@ -19,7 +19,7 @@
         /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #2a0845, #6441A5);
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        padding: 60px 60px;
+        padding: 5vw;
         color: #fff;
         width: 50%;
         text-align: center;
@@ -30,11 +30,18 @@
     }
 
     .box h3 {
-        font-size: 30px;
+        font-size: 2em;
         font-weight: 400;
         text-transform: uppercase;
         margin: 5px;
 
+    }
+
+    p {
+        font-size: 1.2em;
+        /* Utilizando unidades relativas */
+        margin-top: 20px;
+        /* Ajuste de estilo */
     }
 
     .top-border:before {
@@ -80,6 +87,16 @@
         bottom: 20px;
         right: 20px;
         transform: rotate(180deg);
+    }
+
+    .top-border:before,
+    .top-border:after,
+    .bottom-border:before,
+    .bottom-border:after {
+        width: 5vw;
+        /* Utilizando unidades relativas */
+        height: 5vw;
+        /* Utilizando unidades relativas */
     }
 
     .box img {
